# ComputerGraphics_physical_fireworks

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Cyclone/: collide_coarse.cpp  collide_coarse.h  pfgen.h
fireworks/: Fire.cpp  Fire.h  Fireworks.cpp  Fireworks.h  FireworksRule.cpp  FireworksRule.h  MMatrix.cpp  Mover.cpp  Mover.h  MoverConnection.cpp  MoverConnection.h  MoverFactory.cpp  MoverFactory.h  MyGlWindow.cpp  MyGlWindow.h  MySpring.h  Viewer.cpp  main.cpp  stdafx.h  timing.cpp  timing.h
lab_number_name/: 3DUtils.cpp  3DUtils.h  DrawUtils.cpp  DrawUtils.h  MMatrix.h  MoverFactory.cpp  MoverFactory.h  MyGlWindow.h  MySpring.cpp  Vec3f.h  Viewer.cpp  Viewer.h  main.cpp  stdafx.cpp
